frontend/src/styles/board.css
:root {
  --board-bg-color: #6f7887;
  --board-border-color: #525f7a;
  --board-border-width: 50px;
  --board-witdh: 1000px;
  --checker-bg-dark: black;
  --checker-bg-light: white;
  --divider-width: 50px;
  --divider-color: var(--board-border-color);
  --highlight-color: #ffbf00;
  --lighter-color: #a4acba;
}
.wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.collect {
  display: flex;
  flex-direction: column;
  width: 100px;
  position: absolute;
  height: 100%;
  left: calc(var(--board-border-width) * -3);
  background-color: var(--board-bg-color);
  gap: 1rem;
  padding: 1rem;
}
.collect-white,
.collect-black {
  height: 50%;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: var(--board-border-color);
  padding: 0.25rem;
  gap: 0.125rem;
}
.highlight-collect {
  background-color: var(--highlight-color);
}

.collect-item {
  width: 100%;
  height: calc(100% / 24);
}
.collect-item.black {
  background-color: black;
}
.collect-item.white {
  background-color: white;
}

.board {
  position: relative;
  display: flex;
  width: var(--board-witdh);
  aspect-ratio: 2/1;
  background-color: var(--board-bg-color);
  border: var(--board-border-width) solid var(--board-border-color);
  flex-wrap: wrap;
}
.turn-white {
  transform: rotate(-180deg);
}
.hits-wrapper {
  position: absolute;
  display: flex;
  flex-direction: column;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.dice-wrapper {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  top: 50%;
  color: white;
  z-index: 1;
}
.dice-wrapper.left {
  right: 25%;
  transform: translate(50%, -50%);
}
.dice-wrapper.right {
  left: 10%;
  transform: translate(50%, -50%);
}
.dice-wrapper button {
  scale: 0.5;
}

.column {
  position: relative;
  width: calc(calc(100% - var(--divider-width)) / 12);
  height: 75%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.25rem;
  z-index: 1;
}

.column::before {
  content: attr(col-index);
  font-size: 0.75rem;
  position: absolute;
  color: var(--lighter-color);
}

.column.up.column::before {
  top: -1.5rem;
  font-weight: bold;
}

.column.down.column::before {
  bottom: -1.5rem;
  font-weight: bold;
}

.column.up.shrink .checker:not(:last-child) {
  margin-top: -1.5rem;
}

.column.down.shrink .checker:not(:last-child) {
  margin-bottom: -1.5rem;
}

.column.highlight {
  background-color: var(--highlight-color);
}

.divider {
  width: var(--divider-width);
  background-color: var(--divider-color);
}

.up {
  justify-content: flex-end;
  flex-direction: column-reverse;
}

.down {
  justify-content: flex-end;
}

.checker {
  position: relative;
  z-index: 9999;
  width: 50px;
  aspect-ratio: 1;
  border-radius: 50%;
}
.checker-dark {
  background-color: var(--checker-bg-dark);
}
.checker-light {
  background-color: var(--checker-bg-light);
}

